--- a/atividade-6.ipynb
+++ b/atividade-6.ipynb
@@ -76,7 +76,6 @@
     "        estado_atual = pilha.pop()\n",
     "        algoritmo.append(estado_atual)\n",
     "        if estado_atual == goal:\n",
-    "           # print(\"BFS: Fim!\")\n",
     "            return algoritmo\n",
     "        else:\n",
     "            all_acoes = get_all_acoes(get_estado(estado_atual)).copy()\n",
@@ -96,7 +95,6 @@
     "        estado_atual = fila.pop(0) #Simulando uma fila\n",
     "        algoritmo.append(estado_atual)\n",
     "        if estado_atual == goal:   \n",
-    "           # print(\"BFS: Fim!\")\n",
     "            return algoritmo\n",
     "        else:\n",
     "            all_acoes = get_all_acoes(get_estado(estado_atual)).copy()\n",
@@ -161,7 +159,6 @@
     "        )\n",
     "\n",
     "    plt.title(f\"Custo total da rota viável: {cost}\", fontsize=30, fontweight='bold', color='black', loc='left', horizontalalignment='left', verticalalignment='center')\n",
-    "    \n",
     "\n",
     "def brute_force_lowest_cost(starting_point, ending_point, search_algo='dfs', max_iter=1000):\n",
     "    '''\n",
@@ -189,33 +186,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Zerind', 'Sibiu', 'Timisoara']"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_all_destinos('Arad')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "dfs_algo = dfs(\"Arad\", \"Bucharest\")\n",
     "dfs_viable_path = get_viable_path_from_algo(dfs_algo)\n",
-    "dfs_custo_total = get_custo_total(dfs_viable_path)\n"
+    "dfs_custo_total = get_custo_total(dfs_viable_path)"
    ]
   },
   {
