--- a/astar.ipynb
+++ b/astar.ipynb
@@ -2605,9 +2605,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
     "O algoritmo começa explorando todos as cidades que estão conectados diretamente à <b>Arad</b>, e escolhe a cidade que possuí o menor custo de deslocamento (que é a soma dos custos de deslocamento da cidade que está sendo observada até <b>Arad</b>, e da cidade que está sendo observada até <b>Bucharest</b>).\n",
     "Então, a fila da cidades possíveis serem consideradas fica, primeiramente assim: <code style=\"background:black;color:white\">Timisioara (449) -> Zerind (447) -> Sibiu (393)</code>\n",
-    "</div>O algoritmo então decide ir para a cidade que tem o menor custo (Sibiu), e explorar as cidades que estão conectadas à ela. <code style=\"background:black;color:white\">Oradea (671) -> Timisioara (449) -> Zerind (447) -> Fagaras(415) -> Rimnicu Vilcea (413) </code>\n",
+    "O algoritmo então decide ir para a cidade que tem o menor custo (Sibiu), e explorar as cidades que estão conectadas à ela. <code style=\"background:black;color:white\">Oradea (671) -> Timisioara (449) -> Zerind (447) -> Fagaras(415) -> Rimnicu Vilcea (413) </code>\n",
     "\n",
     "A mesma decisão mostrada acima é repetida ficando a fila de prioridade na seguinte maneira:<code style=\"background:black;color:white\">Oradea (671) -> Sibiu -> Craiova (526) -> Timisioara (449) -> Zerind (447) -> Pitesti (417) -> Fagaras (415)</code>.\n",
     "\n",
@@ -2616,6 +2617,8 @@
     "\n",
     "\n",
     "Apesar de <b>Bucharest já ter aparecido na nossa fila não iremos visitá-lo agora pois há a possibilidade de se encontrar um caminho mais eficiente por Pitesti ou Zerind</b>, então o estado da fila sera: <code style=\"background:black;color:white\">Oradea (671) -> Sibiu -> Craiova (526) -> Timisioara (449) -> Bucharest (450) -> Zerind (447) -> Bucharest(418)</code>.\n",
+    "\n",
+    "</div>\n",
     "\n",
     "Como Bucharest é o nosso destino final, e está em primeiro lugar na lista de prioridade o algoritmo aceita isso como solução, então é feito um backtrack para recuperar o caminho que levou até Bucharest com custo total de 418"
    ]
